Xong chuyển quyền nhóm trưởng

--- a/AppChatMobile/app.json
+++ b/AppChatMobile/app.json
@@ -8,6 +8,7 @@
     "facebookAppId": "698245142865922",
     "facebookDisplayName": "AppChat",
     "version": "1.0.0",
+    "sdkVersion": "53.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
