--- a/AppChatMobile/package.json
+++ b/AppChatMobile/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
-    "@expo/metro-runtime": "~4.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/cli-server-api": "^17.0.0",
     "@react-navigation/bottom-tabs": "^7.3.9",
     "@react-navigation/native": "^7.1.5",
@@ -27,38 +27,38 @@
     "cors": "^2.8.5",
     "emoji-mart-native": "^0.6.5-beta",
     "emoji-picker-react": "^4.12.2",
-    "expo": "^52.0.44",
-    "expo-auth-session": "^6.0.3",
-    "expo-av": "~15.0.2",
-    "expo-document-picker": "~13.0.3",
+    "expo": "^53.0.0",
+    "expo-auth-session": "~6.1.5",
+    "expo-av": "~15.1.4",
+    "expo-document-picker": "~13.1.5",
     "expo-facebook": "^12.2.0",
-    "expo-file-system": "~18.0.12",
-    "expo-font": "~13.0.4",
-    "expo-image-picker": "~16.0.6",
-    "expo-splash-screen": "^0.29.22",
-    "expo-status-bar": "~2.0.1",
-    "expo-web-browser": "^14.0.2",
+    "expo-file-system": "~18.1.10",
+    "expo-font": "~13.3.1",
+    "expo-image-picker": "~16.1.4",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.1.6",
     "express": "^5.1.0",
     "firebase": "^11.6.0",
     "formik": "^2.4.6",
     "mongoose": "^8.13.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-actions-sheet": "^0.9.7",
     "react-native-emoji-board": "^1.2.1",
     "react-native-emoji-input": "^1.1.10",
     "react-native-emoji-modal": "^0.2.4",
     "react-native-emoji-selector": "^0.2.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-image-picker": "^8.2.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^4.14.1",
+    "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
+    "react-native-web": "^0.20.0",
     "socket.io-client": "^4.5.4",
     "twilio": "^5.5.2",
     "uuid": "^11.1.0",
@@ -66,7 +66,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "^19.1.5",
     "@types/react-native": "^0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "patch-package": "^8.0.0",
