--- a/AppChatMobile/backend/package.json
+++ b/AppChatMobile/backend/package.json
@@ -12,6 +12,8 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@stream-io/node-sdk": "^0.4.24",
+    "@stream-io/video-react-sdk": "^1.18.0",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
@@ -24,6 +26,7 @@
     "multer": "^1.4.5-lts.2",
     "react-native-document-picker": "^9.3.1",
     "socket.io": "^4.8.1",
+    "stream-chat": "^9.1.1",
     "twilio": "^5.5.2",
     "uuid": "^11.1.0"
   },
