--- a/AppChatMobile/package.json
+++ b/AppChatMobile/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
+    "@expo/config": "^11.0.10",
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/cli-server-api": "^17.0.0",
@@ -19,12 +20,14 @@
     "@react-navigation/native-stack": "^7.3.9",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@stream-io/video-react-native-sdk": "^1.14.2",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "emoji-mart-native": "^0.6.5-beta",
     "emoji-picker-react": "^4.12.2",
     "expo": "^53.0.0",
@@ -62,7 +65,8 @@
     "socket.io-client": "^4.5.4",
     "twilio": "^5.5.2",
     "uuid": "^11.1.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
