--- a/AppChatMobile/package.json
+++ b/AppChatMobile/package.json
@@ -66,7 +66,8 @@
     "twilio": "^5.5.2",
     "uuid": "^11.1.0",
     "yup": "^1.6.1",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "expo-contacts": "~14.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
