--- a/AppChatMobile/package.json
+++ b/AppChatMobile/package.json
@@ -67,7 +67,8 @@
     "uuid": "^11.1.0",
     "yup": "^1.6.1",
     "react-native-webview": "13.13.5",
-    "expo-contacts": "~14.2.4"
+    "expo-contacts": "~14.2.4",
+    "expo-clipboard": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
