--- a/AppChatMobile/package.json
+++ b/AppChatMobile/package.json
@@ -33,6 +33,8 @@
     "expo": "^53.0.0",
     "expo-auth-session": "~6.1.5",
     "expo-av": "~15.1.4",
+    "expo-clipboard": "~7.1.4",
+    "expo-contacts": "~14.2.4",
     "expo-document-picker": "~13.1.5",
     "expo-facebook": "^12.2.0",
     "expo-file-system": "~18.1.10",
@@ -57,18 +59,17 @@
     "react-native-image-picker": "^8.2.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-parsed-text": "^0.0.22",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "socket.io-client": "^4.5.4",
     "twilio": "^5.5.2",
     "uuid": "^11.1.0",
-    "yup": "^1.6.1",
-    "react-native-webview": "13.13.5",
-    "expo-contacts": "~14.2.4",
-    "expo-clipboard": "~7.1.4"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
