--- a/AppChatMobile/package.json
+++ b/AppChatMobile/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.5.0",
     "emoji-mart-native": "^0.6.5-beta",
     "emoji-picker-react": "^4.12.2",
+    "eventemitter3": "^5.0.1",
     "expo": "^53.0.0",
     "expo-auth-session": "~6.1.5",
     "expo-av": "~15.1.4",
