--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@stream-io/video-react-sdk": "^1.16.2",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.2",
@@ -36,6 +37,6 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.3.2"
+    "vite": "^6.2.0"
   }
 }
