--- a/AppChatMobile/package.json
+++ b/AppChatMobile/package.json
@@ -13,6 +13,7 @@
     "@emoji-mart/data": "^1.2.1",
     "@expo/config": "^11.0.10",
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/react-native-action-sheet": "^4.1.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/cli-server-api": "^17.0.0",
     "@react-native-community/datetimepicker": "^8.4.1",
